Update CSS and HTML files, and add commented out code for table rendering

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -154,7 +154,7 @@
                     locals='{ "link":"/PORTAL/2_certificados_colilla.html",
                     "ico": "file-invoice",
                      "title":"Colilla de pagos",
-                    "image":"tmp_servicio.png",
+                    "image":"colilla_pagos.png",
                     "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
