--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -107,7 +107,7 @@
               </li>
             </ul>
           </div>
-          <div class="pa_co_content">
+          <div class="pa_co_form">
             <include src="PORTAL/1_pqrs/1_crear_1.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
