--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -74,48 +74,294 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h3>Aquí puedes ver los casos que has creado</h3>
+            <ul class="items">
+              <li>
+                <h4>Petición</h4>
+                <p>
+                  Es una solicitud mediante la cual se requiere información
+                  adicional y complementaria sobre nuestra oferta de servicios
+                </p>
+              </li>
+              <li>
+                <h4>Queja</h4>
+                <p>
+                  Es una manifestación de inconformidad sobre la atención en
+                  cualquier canal
+                </p>
+              </li>
+              <li>
+                <h4>Reclamo</h4>
+                <p>
+                  Es la manifestación de inconformidad respecto a un producto o
+                  servicio adquirido, ofrecido o prestado por una entidad
+                  vigilada
+                </p>
+              </li>
+              <li>
+                <h4>Servicio</h4>
+                <p>
+                  Es la entrega de la oferta de valor a través de los canales de
+                  atención, la cual puede ser: transaccional, asesoría o
+                  informativa
+                </p>
+              </li>
+            </ul>
           </div>
-          <div class="pa_co_content">
-            <div class="overflow-x-auto">
-              <table class="table table-zebra">
-                <thead>
+          <div class="pa_co_form">
+            <span id="header:j_id4"
+              ><table
+                class="tableClass"
+                id="header:j_id5"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+              >
+                <colgroup span="7"></colgroup>
+                <thead class="">
                   <tr>
-                    <th>Número de Caso</th>
-                    <th>Fecha</th>
-                    <th>Tema</th>
-                    <th>Detalle</th>
-                    <th>Estado del Caso</th>
-                    <th>Observación</th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id6header">
+                      <div id="header:j_id5:j_id6header:sortDiv">
+                        Número de Caso
+                      </div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id9header">
+                      <div id="header:j_id5:j_id9header:sortDiv">
+                        Fecha Radicación
+                      </div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id13header">
+                      <div id="header:j_id5:j_id13header:sortDiv">
+                        Fecha Cierre
+                      </div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id17header">
+                      <div id="header:j_id5:j_id17header:sortDiv">Tema</div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id20header">
+                      <div id="header:j_id5:j_id20header:sortDiv">Detalle</div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id23header">
+                      <div id="header:j_id5:j_id23header:sortDiv">
+                        Estado del Caso
+                      </div>
+                    </th>
+                    <th scope="col" colspan="1" id="header:j_id5:j_id26header">
+                      <div id="header:j_id5:j_id26header:sortDiv">
+                        Observaciones
+                      </div>
+                    </th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="header:j_id5:tb">
                   <tr>
-                    <td>NOV000677</td>
-                    <td>01/16/2024</td>
-                    <td>Atención de pensionado en Oficina Protección</td>
-                    <td>Atención de pensionado en Oficina Protección</td>
-                    <td>Abierto</td>
-                    <td>El equipo Asulado está gestionando tu solicitud</td>
+                    <td id="header:j_id5:0:j_id6" colspan="1">NOV000735</td>
+                    <td id="header:j_id5:0:j_id9" colspan="1">04/03/24</td>
+                    <td id="header:j_id5:0:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:0:j_id17" colspan="1">
+                      Actualización de datos
+                    </td>
+                    <td id="header:j_id5:0:j_id20" colspan="1">
+                      Eliminar suscripción a comunicaciones
+                    </td>
+                    <td id="header:j_id5:0:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:0:j_id26" colspan="1"></td>
                   </tr>
                   <tr>
-                    <td>NOV000677</td>
-                    <td>01/16/2024</td>
-                    <td>Atención de pensionado en Oficina Protección</td>
-                    <td>Atención de pensionado en Oficina Protección</td>
-                    <td>Abierto</td>
-                    <td>El equipo Asulado está gestionando tu solicitud</td>
+                    <td id="header:j_id5:1:j_id6" colspan="1">NOV000733</td>
+                    <td id="header:j_id5:1:j_id9" colspan="1">04/03/24</td>
+                    <td id="header:j_id5:1:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:1:j_id17" colspan="1">
+                      Canales de servicio
+                    </td>
+                    <td id="header:j_id5:1:j_id20" colspan="1">
+                      Asesoria Oferta en canales
+                    </td>
+                    <td id="header:j_id5:1:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:1:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
                   </tr>
                   <tr>
-                    <td>NOV000677</td>
-                    <td>01/16/2024</td>
-                    <td>Atencion de pensionado en Oficina Protección</td>
-                    <td>Atención de pensionado en Oficina Protección</td>
-                    <td>Abierto</td>
-                    <td>El equipo Asulado está gestionando tu solicitud</td>
+                    <td id="header:j_id5:2:j_id6" colspan="1">NOV000729</td>
+                    <td id="header:j_id5:2:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:2:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:2:j_id17" colspan="1">
+                      Actualización de datos
+                    </td>
+                    <td id="header:j_id5:2:j_id20" colspan="1">
+                      Actualización de datos de localización
+                    </td>
+                    <td id="header:j_id5:2:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:2:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:3:j_id6" colspan="1">NOV000728</td>
+                    <td id="header:j_id5:3:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:3:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:3:j_id17" colspan="1">
+                      Actualización de datos
+                    </td>
+                    <td id="header:j_id5:3:j_id20" colspan="1">
+                      Actualización poderes
+                    </td>
+                    <td id="header:j_id5:3:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:3:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:4:j_id6" colspan="1">NOV000727</td>
+                    <td id="header:j_id5:4:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:4:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:4:j_id17" colspan="1">
+                      Información de Aseguradora el sector y regulación
+                    </td>
+                    <td id="header:j_id5:4:j_id20" colspan="1">
+                      Asesoría normas decretos y leyes
+                    </td>
+                    <td id="header:j_id5:4:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:4:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:5:j_id6" colspan="1">NOV000726</td>
+                    <td id="header:j_id5:5:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:5:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:5:j_id17" colspan="1">
+                      Actualización de datos
+                    </td>
+                    <td id="header:j_id5:5:j_id20" colspan="1">
+                      Actualización de datos básicos
+                    </td>
+                    <td id="header:j_id5:5:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:5:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:6:j_id6" colspan="1">NOV000725</td>
+                    <td id="header:j_id5:6:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:6:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:6:j_id17" colspan="1">
+                      Asesoría pensional
+                    </td>
+                    <td id="header:j_id5:6:j_id20" colspan="1">
+                      Preguntas generales Rentas Vitalicias
+                    </td>
+                    <td id="header:j_id5:6:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:6:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:7:j_id6" colspan="1">NOV000724</td>
+                    <td id="header:j_id5:7:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:7:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:7:j_id17" colspan="1">
+                      Canales de servicio
+                    </td>
+                    <td id="header:j_id5:7:j_id20" colspan="1">
+                      Información sobre comunicación enviada
+                    </td>
+                    <td id="header:j_id5:7:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:7:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:8:j_id6" colspan="1">NOV000723</td>
+                    <td id="header:j_id5:8:j_id9" colspan="1">04/01/24</td>
+                    <td id="header:j_id5:8:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:8:j_id17" colspan="1">
+                      Información de Aseguradora el sector y regulación
+                    </td>
+                    <td id="header:j_id5:8:j_id20" colspan="1">
+                      Asesoría sobre la Aseguradora y el sector
+                    </td>
+                    <td id="header:j_id5:8:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:8:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:9:j_id6" colspan="1">NOV000722</td>
+                    <td id="header:j_id5:9:j_id9" colspan="1">03/31/24</td>
+                    <td id="header:j_id5:9:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:9:j_id17" colspan="1">
+                      Novedades de Nómina
+                    </td>
+                    <td id="header:j_id5:9:j_id20" colspan="1">Libranza</td>
+                    <td id="header:j_id5:9:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:9:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:10:j_id6" colspan="1">NOV000721</td>
+                    <td id="header:j_id5:10:j_id9" colspan="1">03/31/24</td>
+                    <td id="header:j_id5:10:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:10:j_id17" colspan="1">
+                      Certificados o Colilla
+                    </td>
+                    <td id="header:j_id5:10:j_id20" colspan="1">
+                      Duplicado Carátula de Póliza
+                    </td>
+                    <td id="header:j_id5:10:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:10:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:11:j_id6" colspan="1">NOV000720</td>
+                    <td id="header:j_id5:11:j_id9" colspan="1">03/31/24</td>
+                    <td id="header:j_id5:11:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:11:j_id17" colspan="1">
+                      Novedades de Nómina
+                    </td>
+                    <td id="header:j_id5:11:j_id20" colspan="1">
+                      Apelación dictamen de invalidez
+                    </td>
+                    <td id="header:j_id5:11:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:11:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:12:j_id6" colspan="1">NOV000719</td>
+                    <td id="header:j_id5:12:j_id9" colspan="1">03/31/24</td>
+                    <td id="header:j_id5:12:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:12:j_id17" colspan="1">
+                      Atención de pensionado en Oficina Protección
+                    </td>
+                    <td id="header:j_id5:12:j_id20" colspan="1">
+                      Atención de pensionado en Oficina Protección
+                    </td>
+                    <td id="header:j_id5:12:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:12:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
+                  </tr>
+                  <tr>
+                    <td id="header:j_id5:13:j_id6" colspan="1">NOV000718</td>
+                    <td id="header:j_id5:13:j_id9" colspan="1">03/31/24</td>
+                    <td id="header:j_id5:13:j_id13" colspan="1"></td>
+                    <td id="header:j_id5:13:j_id17" colspan="1">
+                      Actualización de datos
+                    </td>
+                    <td id="header:j_id5:13:j_id20" colspan="1">
+                      Eliminar suscripción a comunicaciones
+                    </td>
+                    <td id="header:j_id5:13:j_id23" colspan="1">Abierto</td>
+                    <td id="header:j_id5:13:j_id26" colspan="1">
+                      El equipo Asulado está gestionando tu solicitud
+                    </td>
                   </tr>
                 </tbody>
-              </table>
-            </div>
+              </table></span
+            >
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
