--- a/src/pages/PORTAL/4_novedades_1.html
+++ b/src/pages/PORTAL/4_novedades_1.html
@@ -142,7 +142,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/pqrs_2_consultar.html",
+                  "link":"/PORTAL/4_novedades_3_1.html",
                   "ico": "file-lines",
                   "title":"Consulta novedades",
                   "image":"tmp_servicio.png",
