--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -154,7 +154,7 @@
                     locals='{ "link":"/PORTAL/2_certificados_colilla.html",
                     "ico": "file-invoice",
                      "title":"Colilla de pagos",
-                    "image":"colilla_pagos.png",
+                    "image":"home/CERTIFICADO_01.webp",
                     "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
@@ -163,7 +163,7 @@
                     locals='{ "link":"/PORTAL/2_certificados_pension.html",
                     "ico": "file-lines",
                      "title":"Certificado de pensión",
-                    "image":"tmp_servicio.png",
+                    "image":"home/CERTIFICADO_02.webp",
                     "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
                   ></include>
                   <include
@@ -171,7 +171,7 @@
                     locals='{ "link":"#",
                     "ico": "file-invoice-dollar",
                      "title":"Copia de póliza",
-                    "image":"tmp_servicio.png",
+                    "image":"home/CERTIFICADO_03.webp",
                     "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
                   ></include>
 
@@ -180,7 +180,7 @@
                     locals='{ "link":"/PORTAL/2_certificados_ingreso.html",
                     "ico": "money-check-pen",
                      "title":"Certificado de ingresos y retenciones",
-                    "image":"tmp_servicio.png",
+                    "image":"home/CERTIFICADO_04.webp",
                     "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
                   ></include>
                 </ul>
@@ -192,7 +192,7 @@
                     locals='{ "link":"/PORTAL/3_actualizacion_documento.html",
                     "ico": "file-invoice",
                      "title":"Actualización de documentos de identidad",
-                    "image":"tmp_servicio.png",
+                    "image":"home/ACTUALIZACION_01.webp",
                     "content":"¡Mantén tu información al día! Tener tus documentos de identidad nos ayuda a protegerte y a garantizar un excelente servicio."
                   }'
                   ></include>
@@ -202,7 +202,7 @@
                     locals='{ "link":"/PORTAL/3_actualizacion_contacto.html",
                     "ico": "file-lines",
                      "title":"Actualización de datos de contacto",
-                    "image":"tmp_servicio.png",
+                    "image":"home/ACTUALIZACION_02.webp",
                     "content":"¡Aseguremos una buena comunicación! Tener actualizada tu información nos ayuda a ofrecerte la mejor atención."
                   }'
                   ></include>
@@ -215,7 +215,7 @@
                     locals='{ "link":"/PORTAL/4_novedades_1.html",
                     "ico": "file-invoice",
                      "title":"Redistribuciones de mesada",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_01.webp",
                     "content":"Si recientemente has tenido cambios en la distribución de tu mesada, como ajustes en los montos o beneficiarios, ¡cuéntanos! Esto nos ayuda a que tus beneficios se administren de la mejor forma."
                   }'
                   ></include>
@@ -225,7 +225,7 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Certificado de estudio",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_02.webp",
                     "content":"Documento que certifica que los beneficiarios de pensión entre los 18 y 25 años están estudiando un mínimo de 20 horas semanales. Este documento debe presentarse cada 6 meses."
                   }'
                   ></include>
@@ -234,7 +234,7 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Certificado de supervivencia",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_03.webp",
                     "content":"Documento que certifica que te encuentras disponible para seguir recibiendo tu mesada pensional. Lo deben presentar los colombianos que se encuentran pensionados y viven en otro país."
                   }'
                   ></include>
@@ -243,7 +243,7 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Novedades de EPS",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_04.webp",
                     "content":"¡Tu bienestar es nuestra prioridad! Si recientemente hubo cambios con tu EPS, ¡queremos saberlo! Mantén tu información actualizada para que podamos brindarte el mejor servicio."
                   }'
                   ></include>
@@ -252,7 +252,7 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Novedades de Caja de Compensación",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_05.webp",
                     "content":"Si recientemente has tenido cambios en tu Caja de Compensación, como el proveedor de servicios o cualquier actualización relevante, ¡queremos saberlo! Así podemos acompañarte en cada paso."
                   }'
                   ></include>
@@ -261,7 +261,7 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Novedades de cuenta financiera",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_06.webp",
                     "content":"Cuéntanos si recientemente hubo cambios en tu cuenta financiera, como el banco o número de cuenta. Esto nos permite garantizar que tus mesadas se procesen sin contratiempos."
                   }'
                   ></include>
@@ -270,17 +270,17 @@
                     locals='{ "link":"#",
                     "ico": "file-lines",
                      "title":"Novedades Pensión Voluntaria",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_07.webp",
                     "content":"Si has realizado cambios en tu Pensión Voluntaria, como ajustes en las contribuciones o cualquier modificación, ¡cuéntanos! Así podemos brindarte el mejor acompañamiento."
                   }'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
                     locals='{ 
-                    "link":"#",
+                    "link":"/PORTAL/4_novedades_3_1.html",
                     "ico": "file-lines",
                     "title":"Consultar una novedad",
-                    "image":"tmp_servicio.png",
+                    "image":"home/NOVEDADES_07.webp",
                     "content":"¡Tu bienestar es nuestra prioridad! Por eso puedes conocer el estado de la actualización de tus novedades de nómina aquí."
                   }'
                   ></include>
@@ -293,7 +293,7 @@
                     locals='{ "link":"/PORTAL/pqrs_1_crear.html",
                     "ico": "file-invoice",
                     "title":"Crear una solicitud",
-                    "image":"tmp_servicio.png",
+                    "image":"home/SOLICITUDES_01.webp",
                     "content":"¡Tus necesidades son importantes para nosotros! Conoce los diferentes tipos de consultas que puedes realizar e inicia una solicitud ahora"
                   }'
                   ></include>
@@ -302,7 +302,7 @@
                     locals='{ "link":"/PORTAL/pqrs_2_consultar.html",
                       "ico":"file-lines",
                       "title":"Consultar una solicitud",
-                      "image":"tmp_servicio.png",
+                      "image":"home/SOLICITUDES_02.webp",
                       "content":"¡Para nosotros es importante realizar seguimiento a tus solicitudes! Si recientemente realizaste una solicitud puedes conocer el estado del proceso aquí."
                   }'
                   ></include>
