--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -76,7 +76,7 @@
             <h3>Aquí puedes ver los casos que has creado</h3>
             <ul class="items">
               <li>
-                <h4>Petición</h4>
+                <h4>Petición</h4>º
                 <p>
                   Es una solicitud mediante la cual se requiere información
                   adicional y complementaria sobre nuestra oferta de servicios
