--- a/src/pages/PORTAL/3_actualizacion_documento.html
+++ b/src/pages/PORTAL/3_actualizacion_documento.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"user-pen",
         "title":"Actualización de datos",
-        "image":"tmp_header.png",
+        "image":"home/ICONOS_BANNER_01.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
