Update links and filenames in PORTAL pages

--- a/src/pages/PORTAL/4_novedades_1_2.html
+++ b/src/pages/PORTAL/4_novedades_1_2.html
@@ -59,8 +59,8 @@
               <include
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
-                "cls":"active",
-                "link":"/PORTAL/4_novedades_1.html",
+                "cls":"",
+                "link":"/PORTAL/4_novedades_1_1.html",
                 "ico": "file-invoice",
                  "title":"Redistribuciones de mesada",
                 "image":"tmp_servicio.png",
@@ -70,8 +70,8 @@
               <include
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
-                "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "cls":"active",
+                "link":"/PORTAL/4_novedades_1_2.html",
                 "ico": "file-lines",
                  "title":"Novedades de EPS",
                 "image":"tmp_servicio.png",
@@ -82,7 +82,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_3.html",
                 "ico": "file-lines",
                  "title":"Novedades de Caja de Compensación",
                 "image":"tmp_servicio.png",
@@ -94,7 +94,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_4.html",
                 "ico": "file-lines",
                 "title":"Novedades Pensión Voluntaria",
                 "image":"tmp_servicio.png",
@@ -107,7 +107,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_2_1.html",
                 "ico": "file-lines",
                   "title":"Certificado de estudio",
                 "image":"tmp_servicio.png",
@@ -118,7 +118,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/4_novedades_1.html",
+                  "link":"/PORTAL/4_novedades_2_2.html",
                   "ico": "file-lines",
                     "title":"Certificado de supervivencia",
                   "image":"tmp_servicio.png",
@@ -129,7 +129,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/4_novedades_1.html",
+                  "link":"/PORTAL/4_novedades_2_3.html",
                   "ico": "file-lines",
                     "title":"Novedades de cuenta financiera",
                   "image":"tmp_servicio.png",
@@ -158,7 +158,33 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
+          <div class="pa_co_header">
+            <p class="text-lg">
+              A continuación, elige tu EPS y haz click en “nueva deducción”.
+              Diligencia los datos requeridos y adjunta el certificado indicado.
+              Ten en cuenta que tu aporte se calculará automáticamente.
+            </p>
+            <div role="alert" class="alert">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                class="stroke-info shrink-0 w-6 h-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                ></path>
+              </svg>
+              <p>
+                <b>Recuerda:</b> el certificado que ingresarás debe estar bajo
+                el NIT de Asulado. Al finalizar, recibirás un correo confirmando
+                el éxito de tu solicitud.
+              </p>
+            </div>
+          </div>
           <div class="pa_co_content">
             [***** !!!!!!!! COD DE SALESFORCE *****]
           </div>
