--- a/src/pages/PORTAL/4_novedades_3_1.html
+++ b/src/pages/PORTAL/4_novedades_3_1.html
@@ -60,7 +60,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_1.html",
                 "ico": "file-invoice",
                  "title":"Redistribuciones de mesada",
                 "image":"tmp_servicio.png",
@@ -71,7 +71,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_2.html",
                 "ico": "file-lines",
                  "title":"Novedades de EPS",
                 "image":"tmp_servicio.png",
@@ -82,7 +82,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_3.html",
                 "ico": "file-lines",
                  "title":"Novedades de Caja de Compensación",
                 "image":"tmp_servicio.png",
@@ -94,7 +94,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_1_4.html",
                 "ico": "file-lines",
                 "title":"Novedades Pensión Voluntaria",
                 "image":"tmp_servicio.png",
@@ -107,7 +107,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                 "cls":"",
-                "link":"/PORTAL/4_novedades_1.html",
+                "link":"/PORTAL/4_novedades_2_1.html",
                 "ico": "file-lines",
                   "title":"Certificado de estudio",
                 "image":"tmp_servicio.png",
@@ -118,7 +118,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/4_novedades_1.html",
+                  "link":"/PORTAL/4_novedades_2_2.html",
                   "ico": "file-lines",
                     "title":"Certificado de supervivencia",
                   "image":"tmp_servicio.png",
@@ -129,7 +129,7 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/4_novedades_1.html",
+                  "link":"/PORTAL/4_novedades_2_3.html",
                   "ico": "file-lines",
                     "title":"Novedades de cuenta financiera",
                   "image":"tmp_servicio.png",
@@ -159,6 +159,10 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h3>Consulta aqui tus Novedades</h3>
+            <p class="text-lg">
+              Consulta los detalles de tus novedades de nómina a continuación,
+              ordenadas según la fecha de cada solicitud.
+            </p>
           </div>
           <div class="pa_co_form">
             <span id="header:j_id4">
