--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -212,7 +212,7 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"/PORTAL/4_novedades_1.html",
+                    locals='{ "link":"/PORTAL/4_novedades_1_1.html",
                     "ico": "file-invoice",
                      "title":"Redistribuciones de mesada",
                     "image":"home/NOVEDADES_01.webp",
