Update images and CSS styles

--- a/src/pages/PORTAL/2_certificados_colilla.html
+++ b/src/pages/PORTAL/2_certificados_colilla.html
@@ -99,7 +99,7 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h4>Tipo de consulta:</h4>
-            <ul class="items">
+            <ul class="items g2">
               <li>
                 <p>
                   Selecciona <b>“Consultar último pago de mi mesada”</b> para
