--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -92,7 +92,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header"></div>
-          <div class="pa_co_content">
+          <div class="pa_co_form">
             <include
               src="PORTAL/2_certificados/4_certificados_ingreso.html"
             ></include>
