--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -73,39 +73,12 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3>Aquí puedes ver los casos que has creado</h3>
-            <ul class="items">
-              <li>
-                <h4>Petición</h4>º
-                <p>
-                  Es una solicitud mediante la cual se requiere información
-                  adicional y complementaria sobre nuestra oferta de servicios
-                </p>
-              </li>
-              <li>
-                <h4>Queja</h4>
-                <p>
-                  Es una manifestación de inconformidad sobre la atención en
-                  cualquier canal
-                </p>
-              </li>
-              <li>
-                <h4>Reclamo</h4>
-                <p>
-                  Es la manifestación de inconformidad respecto a un producto o
-                  servicio adquirido, ofrecido o prestado por una entidad
-                  vigilada
-                </p>
-              </li>
-              <li>
-                <h4>Servicio</h4>
-                <p>
-                  Es la entrega de la oferta de valor a través de los canales de
-                  atención, la cual puede ser: transaccional, asesoría o
-                  informativa
-                </p>
-              </li>
-            </ul>
+            <p class="text-lg">
+              A continuación encuentras la lista de solicitudes que has creado y
+              el estado en el que se encuentra cada una. Recuerda que están
+              ordenadas según la fecha en que las realizaste, siendo la primera
+              la más reciente.
+            </p>
           </div>
           <div class="pa_co_form">
             <span id="header:j_id4"
