--- a/src/pages/PORTAL/2_certificados_pension.html
+++ b/src/pages/PORTAL/2_certificados_pension.html
@@ -93,7 +93,7 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h4>Generar certificado de pensión:</h4>
-            <ul class="items">
+            <ul class="items g2">
               <li>
                 <p>
                   Selecciona <b>“Certificado de pensión SIN salario”</b> para
